# phonemenomicon

./: Cargo.toml  README.md  index.html  phonemenomicon-2e70f5191976a463.js  phonemenomicon-2e70f5191976a463_bg.wasm  sw.js
assets/: manifest.json
src/: app.rs  lib.rs  main.rs  state.rs
src/pane/: dialect_view.rs  lexicon.rs  mod.rs  romanization.rs  sound_change.rs  util.rs
src/pane/context/: diacritics.rs  mod.rs
src/pane/language/: inventory.rs  mod.rs
src/pane/language/context/: diacritics.rs  mod.rs
src/types/: alphabet.rs  category.rs  language.rs  mod.rs  phoneme.rs  sound_change.rs
