[package]
name = "phonemenomicon"
version = "0.1.0"
authors = ["Hank Lewis <hank@modernatomic.com>"]
edition = "2021"
rust-version = "1.71"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"] }

anyhow = "1.0.75"

egui = "0.22.0"
egui_extras = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

enum-map = "2.6.3"
enum-iterator = "1.4.1"
slotmap = { version = "1.0.6", features = ["serde"] }
once_cell = "1.18.0"
constcat = "0.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[profile.release]
opt-level = 2

[profile.dev.package."*"]
opt-level = 2

[patch.crates-io]